--- a/src/main.scss
+++ b/src/main.scss
@@ -3,13 +3,15 @@
  * Component-specific style should not go here and be included directly as part of the components.
  */
 
-// Bootstrap inclusion with our app theme
+// Theme variables, must be included before the libraries to allow overriding defaults
 @import "theme/theme-variables";
-@import "theme/bootstrap-variables";
+
+// 3rd party libraries
 @import "~bootstrap/scss/bootstrap";
+@import "~font-awesome/scss/font-awesome.scss";
 
 // Theme customization
 @import "theme/theme";
 
-// Global styling
+// Shared helpers
 @import "helpers";
