Added initial i18n setup

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <div class="jumbotron text-xs-center">
     <h1>
-      <span i18n>APP_NAME</span>
+      <span translate>APP_NAME</span>
     </h1>
     <p>
-      <i class="fa fa-bookmark-o"></i> <span i18n>Version</span> {{version}}
+      <i class="fa fa-bookmark-o"></i> <span translate>Version</span> {{version}}
     </p>
   </div>
 </div>
