--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="jumbotron text-xs-center">
     <h1>
       <img class="logo" src="assets/angular-logo.svg" alt="angular logo"/>
-      <span i18n>Hello world !</span>
+      <span translate>Hello world !</span>
     </h1>
     <div appLoading="vm.isLoading"></div>
     <p>
