Added quote service

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,8 +5,6 @@
       <span translate>Hello world !</span>
     </h1>
     <div appLoading="vm.isLoading"></div>
-    <p>
-      <em class="quote">{{quote}}</em>
-    </p>
+    <q>{{quote}}</q>
   </div>
 </div>
