Updated to latest bootstrap version (closed #13)

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="jumbotron text-xs-center">
+  <div class="jumbotron text-center">
     <h1>
       <span translate>APP_NAME</span>
     </h1>
