--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,12 +1,12 @@
 <header>
-  <nav class="navbar navbar-full navbar-dark navbar-static-top bg-inverse">
-    <div class="float-xs-right">
-      <button class="navbar-toggler hidden-md-up" type="button" aria-controls="navbar-menu"
-              aria-label="Toggle navigation" (click)="toggleMenu()" [attr.aria-expanded]="!menuHidden"></button>
-    </div>
+  <nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
+    <button class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbar-menu"
+            aria-label="Toggle navigation" (click)="toggleMenu()" [attr.aria-expanded]="!menuHidden">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <a class="navbar-brand" href="https://github.com/angular-starter-kit" translate>APP_NAME</a>
-    <div id="navbar-menu" class="collapse navbar-toggleable-sm float-xs-none" [ngbCollapse]="menuHidden">
-      <div class="nav navbar-nav">
+    <div id="navbar-menu" class="collapse navbar-collapse float-xs-none" [ngbCollapse]="menuHidden">
+      <div class="navbar-nav">
         <a class="nav-item nav-link text-uppercase" routerLink="/home" routerLinkActive="active">
           <i class="fa fa-home"></i>
           <span translate>Home</span>
@@ -16,14 +16,12 @@
           <span translate>About</span>
         </a>
       </div>
-      <div class="float-md-right">
-        <div ngbDropdown>
-          <button id="language-dropdown" class="btn btn-default" ngbDropdownToggle>{{currentLanguage}}</button>
-          <div class="dropdown-menu" aria-labelledby="language-dropdown">
-            <button class="dropdown-item" *ngFor="let language of languages" (click)="setLanguage(language)">
-              {{language}}
-            </button>
-          </div>
+      <div class="ml-auto" ngbDropdown>
+        <button id="language-dropdown" class="btn btn-default" ngbDropdownToggle>{{currentLanguage}}</button>
+        <div class="dropdown-menu" aria-labelledby="language-dropdown">
+          <button class="dropdown-item" *ngFor="let language of languages" (click)="setLanguage(language)">
+            {{language}}
+          </button>
         </div>
       </div>
     </div>
