--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="jumbotron text-xs-center">
+  <div class="jumbotron text-center">
     <h1>
       <img class="logo" src="assets/angular-logo.svg" alt="angular logo"/>
       <span translate>Hello world !</span>
