--- a/generators/app/templates/src/app/core/shell/header/header.component.html
+++ b/generators/app/templates/src/app/core/shell/header/header.component.html
@@ -18,7 +18,7 @@
       </div>
       <div class="ml-auto" ngbDropdown>
         <button id="language-dropdown" class="btn btn-default" ngbDropdownToggle>{{currentLanguage}}</button>
-        <div class="dropdown-menu" aria-labelledby="language-dropdown">
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="language-dropdown">
           <button class="dropdown-item" *ngFor="let language of languages" (click)="setLanguage(language)">
             {{language}}
           </button>
