--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -3,17 +3,39 @@
 <head>
   <meta charset="utf-8"/>
   <title><%= props.appName %></title>
+<% if (props.target === 'mobile') { -%>
+  <base href="./"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+  <meta name="msapplication-tap-highlight" content="no"/>
+  <meta name="theme-color" content="#4e8ef7"/>
+  <link rel="manifest" href="manifest.json"/>
+<% } else { -%>
   <base href="/"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<% } -%>
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 </head>
 <body>
+<% if (props.target === 'web') { -%>
   <!--[if lt IE 10]>
   <p>
     You are using an <strong>outdated</strong> browser.
     Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
   </p>
   <![endif]-->
+<% } -%>
+<% if (props.target === 'mobile') { -%>
+  <!-- Include Cordova script only when needed -->
+  <script>
+    if (!/^http/.test(location.protocol)) {
+      document.write('<script src="cordova.js"><\/script>');
+    }
+  </script>
+<% } -%>
+<% if (props.ui === 'ionic') { -%>
+  <ion-app></ion-app>
+<% } else { -%>
   <app-root></app-root>
+<% } -%>
 </body>
 </html>
