Fixed line breaks

--- a/generators/app/templates/src/app/core/shell/__ionic._shell.component.html
+++ b/generators/app/templates/src/app/core/shell/__ionic._shell.component.html
@@ -12,7 +12,7 @@
             </button>
           </div>
         </div>
-<% } else { %>
+<% } else { -%>
         <ion-header>
           <ion-toolbar>
             <ion-buttons end>
@@ -23,7 +23,7 @@
             <ion-title>{{'APP_TITLE' | translate}}</ion-title>
           </ion-toolbar>
         </ion-header>
-<% } %>
+<% } -%>
         <ion-list>
           <button menuClose ion-item routerLink="/home" routerLinkActive="active">
             <span translate>Home</span>
