--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -13,7 +13,10 @@
   <base href="/"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <% } -%>
+<% if (props.target.includes('web')) { -%>
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<% } -%>
 </head>
 <body>
 <% if (props.target.includes('web')) { -%>
