Fixed ionic cordova/no auth template

--- a/generators/app/templates/src/app/core/shell/__ionic._shell.component.html
+++ b/generators/app/templates/src/app/core/shell/__ionic._shell.component.html
@@ -3,7 +3,7 @@
 <% if (!props.auth) { -%>
     <ion-header>
       <ion-toolbar color="primary">
-        <ion-buttons end>
+        <ion-buttons *ngIf="isWeb" end>
           <button ion-button icon-only (click)="changeLanguage()">
             <ion-icon name="globe"></ion-icon>
           </button>
