--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -8,10 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
   <meta name="theme-color" content="#4e8ef7"/>
-  <link rel="manifest" href="manifest.json"/>
 <% } else { -%>
   <base href="/"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<% } -%>
+<% if (props.pwa) { -%>
+  <link rel="manifest" href="manifest.json"/>
 <% } -%>
 <% if (props.target.includes('web')) { -%>
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
