Updated deep selector (closes #152)

--- a/generators/app/templates/src/app/login/__auth+ionic.login.component.scss
+++ b/generators/app/templates/src/app/login/__auth+ionic.login.component.scss
@@ -20,7 +20,7 @@
 // Force style down to child components
 // See https://angular.io/guide/component-styles#deep
 // stylelint-disable-next-line selector-max-compound-selectors
-:host /deep/ .select-icon .select-icon-inner {
+:host ::ng-deep .select-icon .select-icon-inner {
   color: color-contrast($colors, primary);
 }
 
