--- a/generators/app/templates/src/app/shared/loader/_loader.component.scss
+++ b/generators/app/templates/src/app/shared/loader/_loader.component.scss
@@ -3,7 +3,7 @@
   vertical-align: middle;
 }
 <% } else if (props.ui === 'material') { -%>
-mat-spinner {
+.mat-spinner {
   margin: 0 auto;
 }
 <% } -%>
