--- a/generators/app/templates/src/theme/__material.theme-variables.scss
+++ b/generators/app/templates/src/theme/__material.theme-variables.scss
@@ -2,32 +2,22 @@
  * Application global variables.
  */
 
-// Set Font Awesome font path
-$fa-font-path: "~font-awesome/fonts";
-
-// ---------------------------------------------------------------------------
-// Material Angular variables
+// Angular Material custom theme
+// See https://material.angular.io/guide/theming for more details.
 //
-// To override Material Angular variables on specific components
-// use mixins: https://material.angular.io/guide/theming-your-components.
+// You can also read https://medium.com/@tomastrajan/the-complete-guide-to-angular-material-themes-4d165a9d24d1
+// for more insight about Angular Material theming.
 
-@import "~@angular/material/theming";
-
-@include mat-core();
+@import '~@angular/material/theming';
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$candy-app-primary: mat-palette($mat-indigo);
-$candy-app-accent:  mat-palette($mat-pink, A200, A100, A400);
+$app-primary: mat-palette($mat-blue);
+$app-accent:  mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn:    mat-palette($mat-red);
+$app-warn:    mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include angular-material-theme($candy-app-theme);
+$app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
