--- a/generators/app/templates/src/app/about/__material.about.component.html
+++ b/generators/app/templates/src/app/about/__material.about.component.html
@@ -1,8 +1,11 @@
-<div class="app-content text-center">
-	<h1>
-		<span translate>APP_NAME</span>
+<div class="container">
+  <mat-card>
+    <h1>
+      <mat-card-title translate>APP_NAME</mat-card-title>
     </h1>
-    <p>
-		<i class="fa fa-bookmark-o"></i> <span translate>Version</span> {{version}}
-    </p>
+    <mat-card-content>
+      <mat-icon>code</mat-icon>
+      <span translate>Version</span> {{version}}
+    </mat-card-content>
+  </mat-card>
 </div>
