--- a/generators/app/templates/src/app/home/__material.home.component.html
+++ b/generators/app/templates/src/app/home/__material.home.component.html
@@ -1,8 +1,14 @@
-<div class="app-content text-center">
-  <h1>
-    <img class="logo" src="assets/ngx-rocket-logo.png" alt="angular logo" />
-    <span translate>Hello world !</span>
-  </h1>
-  <app-loader [isLoading]="isLoading"></app-loader>
-  <q [hidden]="isLoading" class="text-center">{{quote}}</q>
+<div class="container">
+  <mat-card>
+    <p>
+      <img class="logo" src="assets/ngx-rocket-logo.png" alt="angular logo"/>
+    </p>
+    <mat-card-content>
+      <mat-card-title translate>Hello world !</mat-card-title>
+      <mat-card-subtitle>
+        <app-loader [isLoading]="isLoading" size="1.5"></app-loader>
+        <q [hidden]="isLoading">{{quote}}</q>
+      </mat-card-subtitle>
+    </mat-card-content>
+  </mat-card>
 </div>
