--- a/generators/app/templates/src/app/login/__auth+material.login.component.scss
+++ b/generators/app/templates/src/app/login/__auth+material.login.component.scss
@@ -1,33 +1,23 @@
 @import "../../theme/theme-variables";
 
-.login-container {
-  height: 100%;
-  padding: 0;
+:host {
+  display: flex;
+  flex: 1;
+  background-color: #f5f5f5;
+}
+
+.inline-loader {
+  display: inline-block;
+}
+
+.version {
   margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.login-box {
-  min-width: 30rem;
-  width: auto;
-}
-
-.form-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.form-container > .mat-form-field {
+.login-container, .mat-form-field {
   width: 100%;
 }
 
-.lang-container {
-  height: 100%;
-  padding: 0;
-  margin: 30px 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.login-error {
+  color: mat-color($app-warn);
 }
