--- a/generators/app/templates/src/theme/_theme.scss
+++ b/generators/app/templates/src/theme/_theme.scss
@@ -4,16 +4,14 @@
  */
 
 <% if (props.ui === 'material') { -%>
-body {
-  font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
-}
-
-.app-content {
-  padding: 20px 70px 50px;
-}
-
-.text-center {
-  text-align: center;
+  height: 100%;
 }
 <% } -%>
