--- a/generators/app/templates/src/_main.scss
+++ b/generators/app/templates/src/_main.scss
@@ -265,7 +265,7 @@
 
 // Angular Material custom theme
 // The mixins below must be included once so we separated them from the variables
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
