Fixed loader display

--- a/generators/app/templates/src/app/shared/loader/__material.loader.component.html
+++ b/generators/app/templates/src/app/shared/loader/__material.loader.component.html
@@ -1,4 +1,4 @@
-<div [hidden]="!isLoading" fxFlex fxLayoutAlign="center center">
+<div [hidden]="!isLoading">
   <mat-progress-spinner mode="indeterminate" [strokeWidth]="2" [diameter]="32 * size"></mat-progress-spinner>
   <span class="message">{{message}}</span>
 </div>
