--- a/generators/app/templates/src/app/core/shell/header/__material-simple.header.component.scss
+++ b/generators/app/templates/src/app/core/shell/header/__material-simple.header.component.scss
@@ -9,7 +9,7 @@
 }
 
 .brand {
-  color: mat-color($app-primary, 'default-contrast');
+  color: mat-color($app-primary, "default-contrast");
   text-decoration: none;
   padding-right: 1rem;
 }
