Fixed font awesome fonts path for angular-cli@1.6 See https://github.com/angular/angular-cli/issues/8781

--- a/generators/app/templates/src/theme/__bootstrap.theme-variables.scss
+++ b/generators/app/templates/src/theme/__bootstrap.theme-variables.scss
@@ -3,7 +3,7 @@
  */
 
 // Set Font Awesome font path
-$fa-font-path: "~font-awesome/fonts";
+$fa-font-path: "../node_modules/font-awesome/fonts";
 
 // ---------------------------------------------------------------------------
 // Bootstrap variables
