--- a/generators/app/templates/src/theme/__bootstrap.theme-variables.scss
+++ b/generators/app/templates/src/theme/__bootstrap.theme-variables.scss
@@ -3,7 +3,7 @@
  */
 
 // Set Font Awesome font path
-$fa-font-path: "../node_modules/font-awesome/fonts";
+$fa-font-path: "~/font-awesome/fonts";
 
 // ---------------------------------------------------------------------------
 // Bootstrap variables
