--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -5,7 +5,7 @@
   <title><%= props.appName %></title>
 <% if (props.target.includes('cordova')) { -%>
   <base href="./"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
 <% } else { -%>
   <base href="/"/>
