--- a/generators/app/templates/src/theme/_theme.scss
+++ b/generators/app/templates/src/theme/_theme.scss
@@ -16,4 +16,10 @@ body {
   margin: 0;
   height: 100%;
 }
+<% } else if (props.ui === 'raw') { -%>
+body, html {
+  margin: 0;
+  padding: 0;
+  font-family: "Arial", sans-serif;
+}
 <% } -%>
