Fixed lint errors

--- a/generators/app/templates/src/app/about/__raw.about.component.html
+++ b/generators/app/templates/src/app/about/__raw.about.component.html
@@ -3,6 +3,6 @@
     <span translate>APP_NAME</span>
   </h1>
   <p>
-    <strong>< ></strong> <span translate>Version</span> {{version}}
+    <strong>&lt; &gt;</strong> <span translate>Version</span> {{version}}
   </p>
 </div>
