--- a/generators/app/templates/src/theme/_theme.scss
+++ b/generators/app/templates/src/theme/_theme.scss
@@ -17,9 +17,10 @@ body {
   height: 100%;
 }
 <% } else if (props.ui === 'raw') { -%>
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
-  font-family: "Arial", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 <% } -%>
